Fixed spacing on first widget

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -25,13 +25,13 @@
 .edit #page-zones__main-overlay + .widget:not(.row),
 #page-zones__main > .widget:not(.row):first-child,
 #page-zones__main > .row + .widget:not(.row) {
-    margin-top: 60px;
+    margin-top: 50px;
 }
 
 
 // Move spacing to last widget in the main zone (not rows)
 #page-zones__main > .widget:not(.row):last-child {
-    margin-bottom: 60px;
+    margin-bottom: 50px;
 }
 
 
